--- a/VSExam/src/main/res/drawable/white_with_shadow.xml
+++ b/VSExam/src/main/res/drawable/white_with_shadow.xml
@@ -36,8 +36,7 @@
     <!-- Background -->
     <item>
         <shape>
-            <solid android:color="@android:color/white" />
-            <corners android:radius="3dp" />
+            <solid android:color="@color/white" />
         </shape>
     </item>
 </layer-list>
