--- a/VSExam/src/main/res/layout/exam_list_item.xml
+++ b/VSExam/src/main/res/layout/exam_list_item.xml
@@ -2,55 +2,89 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="horizontal"
               android:id="@+id/layout"
               android:layout_width="match_parent"
-              android:layout_height="@dimen/exam_list_item_height"
-              android:minHeight="@dimen/exam_list_item_height" >
+              android:layout_height="wrap_content"
+              android:baselineAligned="false"
+              android:orientation="horizontal"
+              android:paddingLeft="5dp"
+              android:paddingTop="5dp"
+              android:paddingBottom="5dp"
+              android:paddingRight="10dp"
+              tools:background="@color/standard_grey" >
 
-    <TextView android:id="@+id/text1"
-              android:layout_width="65dp"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:textColor="@color/dark_text"
-              android:paddingLeft="2dp"
-              android:paddingRight="2dp"
-              tools:text="CODE"  />
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="center_vertical"
+                  android:paddingRight="8dp"
+                  android:minWidth="45dp"
+                  android:orientation="vertical">
 
-    <TextView android:id="@+id/text2"
-              android:layout_width="0dp"
-              android:layout_weight="1"
-              android:textColor="@color/dark_text"
-              android:layout_height="match_parent"
-              android:gravity="center_vertical"
-              android:paddingLeft="2dp"
-              android:paddingRight="2dp"
-              tools:text="Course Name" />
-
-    <LinearLayout style="@style/ResponsiveLayout"
-                  android:layout_width="wrap_content"
-                  android:id="@+id/layout_datetime"
-                  android:layout_height="match_parent"
-                  android:paddingRight="5dp"
-                  android:gravity="center" >
-
-        <TextView android:id="@+id/text3"
-                  android:textColor="@color/dark_text"
+        <TextView android:id="@+id/text_day"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:paddingLeft="5dp"
-                  android:paddingRight="5dp"
-                  android:gravity="center"
-                  tools:text="Date" />
+                  android:textSize="22sp"
+                  android:layout_gravity="center_horizontal"
+                  tools:text="31" />
 
-        <TextView android:id="@+id/text4"
-                  android:textColor="@color/dark_text"
+        <TextView android:id="@+id/text_month"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:paddingLeft="5dp"
-                  android:paddingRight="5dp"
-                  android:gravity="center"
-                  tools:text="Time" />
+                  android:layout_gravity="center_horizontal"
+                  tools:text="listopad"/>
 
     </LinearLayout>
+
+    <LinearLayout android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="1"
+                  android:orientation="vertical">
+
+        <RelativeLayout android:layout_width="match_parent"
+                        android:layout_height="wrap_content" >
+
+            <TextView android:id="@+id/text_code"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_alignParentLeft="true"
+                      tools:text="PHM" />
+
+            <TextView android:id="@+id/text_time"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_alignParentRight="true"
+                      tools:text="14:00" />
+
+        </RelativeLayout>
+
+        <TextView android:id="@+id/text_name"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:gravity="center_vertical"
+                  android:textSize="18sp"
+                  android:textStyle="bold"
+                  android:ellipsize="end"
+                  android:singleLine="true"
+                  tools:text="State exam in study course" />
+
+        <RelativeLayout android:layout_width="match_parent"
+                        android:layout_height="wrap_content" >
+
+
+            <TextView android:id="@+id/text_type"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_alignParentLeft="true"
+                      tools:text="examination (oral)" />
+
+            <TextView android:id="@+id/text_capacity"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_alignParentRight="true"
+                      tools:text="11/12"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
 </LinearLayout>
