--- a/VSExam/src/main/res/layout/fragment_main.xml
+++ b/VSExam/src/main/res/layout/fragment_main.xml
@@ -8,10 +8,9 @@
               android:background="@color/standard_grey"
               android:layout_height="match_parent">
 
-    <FrameLayout
-        android:layout_width="@dimen/sliding_pane_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start" >
+    <FrameLayout android:layout_width="@dimen/sliding_pane_width"
+                 android:layout_height="match_parent"
+                 android:layout_gravity="start" >
 
         <ListView android:id="@+id/left_pane"
                   android:layout_width="match_parent"
@@ -33,8 +32,8 @@
     </FrameLayout>
 
     <FrameLayout android:id="@+id/container"
-                android:layout_width="400dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+                 android:layout_width="400dp"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1" />
 
 </android.support.v4.widget.SlidingPaneLayout>
