--- a/VSExam/src/main/res/layout/layout_loading.xml
+++ b/VSExam/src/main/res/layout/layout_loading.xml
@@ -5,23 +5,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <!--style="?android:attr/progressBarStyleLarge"-->
-    <ProgressBar
+    <ProgressBar android:id="@+id/progressBar"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 style="?android:attr/progressBarStyleLarge"
+                 android:layout_centerVertical="true"
+                 android:layout_centerHorizontal="true"/>
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_below="@+id/progressBar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:text=""
-        tools:text="Example text"/>
+    <TextView android:id="@+id/textView"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_below="@+id/progressBar"
+              android:layout_centerHorizontal="true"
+              android:layout_marginTop="10dp"
+              android:text=""
+              tools:text="Example text"/>
 
 </RelativeLayout>
