--- a/VSExam/src/main/res/values-w600dp/dimens.xml
+++ b/VSExam/src/main/res/values-w600dp/dimens.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--<dimen name="exam_list_item_height">60dp</dimen>-->
-    <!--<dimen name="exam_list_item_date_width">150dp</dimen>-->
     <dimen name="sliding_pane_width">400dp</dimen>
     <dimen name="details_inner_padding">7dp</dimen>
-    <dimen name="details_side_margin">70dp</dimen>
-    <dimen name="classmates_progress_height">-2dp</dimen> <!-- wrap_content -->
+    <dimen name="data_header_content_pair_margin">5dp</dimen>
+    <dimen name="data_layout_margin_vertical">10dp</dimen>
+    <dimen name="data_layout_margin_horizontal">5dp</dimen>
 </resources>
