--- a/VSExam/src/main/res/values/dimens.xml
+++ b/VSExam/src/main/res/values/dimens.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="exam_list_item_height">50dp</dimen>
-    <!--<dimen name="exam_list_item_date_width">85dp</dimen>-->
+    <dimen name="classmate_list_item_height">50dp</dimen>
+    <dimen name="shadowbox_padding">15dp</dimen>
+
     <dimen name="sliding_pane_width">280dp</dimen>
     <dimen name="details_inner_padding">3dp</dimen>
-    <dimen name="details_side_margin">7dp</dimen>
-    <dimen name="classmates_progress_height">250dp</dimen>
+    <dimen name="data_header_content_pair_margin">3dp</dimen>
+    <dimen name="data_layout_margin_vertical">10dp</dimen>
+    <dimen name="data_layout_margin_horizontal">5dp</dimen>
 </resources>
