--- a/VSExam/src/main/res/layout/registration_stacked.xml
+++ b/VSExam/src/main/res/layout/registration_stacked.xml
@@ -7,13 +7,12 @@
               android:orientation="vertical">
 
     <LinearLayout style="@style/RegistrationBoxLayout"
-                  android:weightSum="6"
+                  android:weightSum="4"
                   android:gravity="bottom">
 
         <FrameLayout style="@style/RegistrationBoxFrame">
 
-            <LinearLayout style="@style/RegistrationBoxContent"
-                          android:layout_gravity="left">
+            <LinearLayout style="@style/RegistrationBoxContent">
 
                 <TextView android:id="@+id/text_header_1"
                           style="@style/RegistrationBoxTextHeader"/>
@@ -27,8 +26,7 @@
 
         <FrameLayout style="@style/RegistrationBoxFrame">
 
-            <LinearLayout style="@style/RegistrationBoxContent"
-                          android:layout_gravity="right">
+            <LinearLayout style="@style/RegistrationBoxContent">
 
                 <TextView android:id="@+id/text_header_3"
                           style="@style/RegistrationBoxTextHeader"/>
@@ -69,12 +67,11 @@
 
     <LinearLayout style="@style/RegistrationBoxLayout"
                   android:gravity="center_horizontal|top"
-                  android:weightSum="3">
+                  android:weightSum="2">
 
         <FrameLayout style="@style/RegistrationBoxFrame">
 
-            <LinearLayout style="@style/RegistrationBoxContent"
-                          android:layout_gravity="center_horizontal|top">
+            <LinearLayout style="@style/RegistrationBoxContent">
 
                 <TextView android:id="@+id/text_header_2"
                           style="@style/RegistrationBoxTextHeader"/>
