--- a/VSExam/src/main/res/values/styles.xml
+++ b/VSExam/src/main/res/values/styles.xml
@@ -97,27 +97,27 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">left</item>
-        <item name="android:weightSum">7</item>
+        <item name="android:weightSum">5</item>
         <item name="android:baselineAligned">false</item>
     </style>
 
     <style name="RegistrationBoxFrame">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">3</item>
+        <item name="android:layout_weight">2</item>
 </style>
 
     <style name="RegistrationBoxContent">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">vertical</item>
+        <item name="android:layout_gravity">center_horizontal</item>
     </style>
 
     <style name="RegistrationBoxTextHeader">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:minWidth">80dp</item>
         <item name="android:gravity">center_horizontal</item>
     </style>
 
@@ -142,7 +142,7 @@
     <style name="RegistrationTimeLineBlock">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">15dp</item>
-        <item name="android:weightSum">3</item>
+        <item name="android:weightSum">5</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:layout_marginTop">5dp</item>
@@ -152,7 +152,7 @@
     <style name="RegistrationTimeLineBox">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_weight">2</item>
+        <item name="android:layout_weight">3</item>
     </style>
 
     <style name="RegistrationTimeLineBase">
