--- a/VSExam/src/main/res/layout/exam_detail_data.xml
+++ b/VSExam/src/main/res/layout/exam_detail_data.xml
@@ -77,6 +77,7 @@
                       android:layout_height="wrap_content"
                       android:maxWidth="100dp"
                       android:layout_gravity="center_vertical"
+                      android:gravity="right"
                       android:textAppearance="?android:textAppearanceMedium"
                       tools:text="Likešova aula (ZI)"/>
 
