Finalize some changes
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/VSExam/src/main/res/layout/exam_detail_classmates.xml
+++ b/VSExam/src/main/res/layout/exam_detail_classmates.xml
@@ -12,8 +12,6 @@
     <LinearLayout android:id="@+id/layout_classmates"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:orientation="vertical"
-                  android:visibility="gone"
-                  tools:visibility="visible" />
+                  android:orientation="vertical"/>
 
 </LinearLayout>
