--- a/VSExam/src/main/res/layout/exam_detail_data.xml
+++ b/VSExam/src/main/res/layout/exam_detail_data.xml
@@ -59,9 +59,7 @@
         </LinearLayout>
 
         <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:paddingTop="10dp"
-                      android:paddingBottom="5dp">
+                      android:layout_height="wrap_content">
 
             <TextView android:id="@+id/text_examDate"
                       android:layout_width="0dp"
@@ -170,24 +168,112 @@
 
         </LinearLayout>
 
+        <TextView style="@style/DataHeader.Responsive"
+                  android:text="@string/capacity"/>
 
-        <LinearLayout style="@style/DataLayout">
-            <TextView style="@style/DataHeader.Responsive"
-                      android:text="@string/capacity"/>
+        <LinearLayout android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
 
-            <TextView style="@style/DataContent.Responsive"
-                      android:id="@+id/text_capacity"
-                      tools:text="12/12"/>
+            <LinearLayout android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:paddingRight="10dp"
+                          android:orientation="vertical">
 
+                <TextView style="@style/DataContent.Responsive"
+                          android:text="@string/capacity_free"/>
 
-            <TextView style="@style/DataHeader.Responsive"
-                      android:text="@string/registration"/>
+                <TextView style="@style/DataContent.Responsive"
+                          android:text="@string/capacity_occupied"/>
+
+                <TextView style="@style/DataContent.Responsive"
+                          android:text="@string/capacity_total"/>
+
+            </LinearLayout>
+
+            <LinearLayout android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:orientation="vertical">
+
+                <TextView style="@style/DataContent.Responsive"
+                          android:id="@+id/text_capacity_free"
+                          android:textStyle="bold"
+                          tools:text="6"/>
+
+                <TextView style="@style/DataContent.Responsive"
+                          android:id="@+id/text_capacity_occupied"
+                          android:textStyle="bold"
+                          tools:text="6"/>
+
+                <TextView style="@style/DataContent.Responsive"
+                          android:id="@+id/text_capacity_total"
+                          android:textStyle="bold"
+                          tools:text="12"/>
+
+            </LinearLayout>
 
         </LinearLayout>
+
+        <TextView style="@style/DataHeader.Responsive"
+                  android:layout_marginBottom="10dp"
+                  android:text="@string/registration_dates"/>
 
         <FrameLayout android:id="@+id/layout_registration"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>
+
+        <TextView style="@style/DataHeader.Responsive"
+                  android:text="@string/following_events"/>
+
+        <TableLayout android:id="@+id/layout_table"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:shrinkColumns="0"
+                     android:stretchColumns="1">
+
+            <TableRow style="@style/EventsTableRow">
+
+                <TextView style="@style/DataContent.Small.TableCellHeader"
+                          android:text="@string/registering_ends"/>
+
+                <TextView style="@style/DataContent.Small.TableCellContent"
+                          tools:text="22 dnů 13 hodin 7 minut"/>
+
+            </TableRow>
+
+            <TableRow style="@style/EventsTableRow">
+
+                <TextView style="@style/DataContent.Small.TableCellHeader"
+                          android:text="@string/unregistering_ends"/>
+
+                <TextView style="@style/DataContent.Small.TableCellContent"
+                          android:singleLine="false"
+                          tools:text="22 dnů 13 hodin 7 minut"/>
+
+            </TableRow>
+
+            <TableRow style="@style/EventsTableRow">
+
+                <TextView style="@style/DataContent.Small.TableCellHeader"
+                          android:text="@string/registering_ends"/>
+
+                <TextView style="@style/DataContent.Small.TableCellContent"
+                          tools:text="22 dnů 13 hodin 7 minut"/>
+
+            </TableRow>
+
+            <TableRow style="@style/EventsTableRow">
+
+                <TextView style="@style/DataContent.Small.TableCellHeader"
+                          android:text="@string/exam_date"/>
+
+                <TextView style="@style/DataContent.Small.TableCellContent"
+                          tools:text="22 dnů 13 hodin 27 minut"/>
+
+            </TableRow>
+
+        </TableLayout>
+
 
     </LinearLayout>
 
