--- a/VSExam/src/main/res/layout/exam_list_item.xml
+++ b/VSExam/src/main/res/layout/exam_list_item.xml
@@ -67,23 +67,25 @@
                   android:singleLine="true"
                   tools:text="State exam in study course" />
 
-        <RelativeLayout android:layout_width="match_parent"
-                        android:layout_height="wrap_content" >
-
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
 
             <TextView android:id="@+id/text_type"
-                      android:layout_width="wrap_content"
+                      android:layout_width="0dp"
                       android:layout_height="wrap_content"
-                      android:layout_alignParentLeft="true"
+                      android:layout_weight="1"
+                      android:ellipsize="end"
+                      android:singleLine="true"
                       tools:text="examination (oral)" />
 
             <TextView android:id="@+id/text_capacity"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_alignParentRight="true"
+                      android:textStyle="bold"
                       tools:text="11/12"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
