Add possibility to auto add exams to calendar
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/VSExam/src/main/res/layout/exam_detail_data.xml
+++ b/VSExam/src/main/res/layout/exam_detail_data.xml
@@ -223,6 +223,7 @@
                      android:layout_height="wrap_content"/>
 
         <TextView style="@style/DataHeader.Responsive"
+                  android:layout_marginTop="10dp"
                   android:text="@string/following_events"/>
 
         <TableLayout android:id="@+id/layout_table"
