Current working version
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/VSExam/src/main/res/menu/main.xml
+++ b/VSExam/src/main/res/menu/main.xml
@@ -9,7 +9,7 @@
 
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
-          android:icon="@android:drawable/ic_menu_manage"
+          android:icon="@drawable/ic_menu_manage"
           android:orderInCategory="101"
           app:showAsAction="ifRoom"/>
 
