--- a/VSExam/src/main/res/layout/fragment_login.xml
+++ b/VSExam/src/main/res/layout/fragment_login.xml
@@ -6,19 +6,22 @@
     android:id="@+id/login_form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     tools:context="com.frca.vsexam.fragments.LoginFragment">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="16dp"
+        android:padding="6dp"
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/image_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:padding="10dp"
             android:contentDescription="@string/logo"
             android:layout_marginBottom="20dp"
             android:src="@drawable/logo_huge"/>
